# SlapThatLikeButton-TestingStarterProject

./: README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
